<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/all_checked_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="55dp"
        android:text="@string/all_checked"
        android:textSize="22sp"
        android:paddingLeft="12dp"
        android:textColor="#0e99fc"
        android:button="@drawable/video_select_selector"
        android:background="@null" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/dialog_button_style"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/delete"
            style="@style/dialog_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:text="@string/delete" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:drawableTop="@drawable/no_data_bg"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/empty_content"
        android:drawablePadding="18dp"
        android:textColor="#434343"
        android:textSize="24sp"
        android:visibility="gone"
        tools:visibility="visible" />
</merge>