<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/exercise_result_bg">

    <LinearLayout
        android:id="@+id/project_score_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="115dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_star_negative_big0" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@drawable/ic_star_negative_big1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@drawable/ic_star_negative_big2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@drawable/ic_star_negative_big3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@drawable/ic_star_negative_big4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="254dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_correct_rote"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:text="@string/correct_rate"
            android:textColor="#302720"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exercise_result_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#302720"
            android:textSize="22sp"
            tools:text="100%" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:drawableLeft="@drawable/ic_time"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:text="@string/use_time"
            android:textColor="#302720"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exercise_result_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#302720"
            android:textSize="22sp"
            tools:text="02:30" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exercise_result_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_button_bg"
            android:gravity="center"
            android:text="看解析"
            android:textSize="24sp" />

        <Space
            android:id="@+id/space"
            android:layout_width="21dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/exercise_result_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:background="@drawable/dialog_button_bg"
            android:gravity="center"
            android:text="看视频"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/exercise_result_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:background="@drawable/dialog_button_bg"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/exercise_result_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/project_not_master" />


</FrameLayout>